--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,27 +3,40 @@ name: CI Workflow for React App
 on:
   push:
     branches:
-      - master
+      - master  # This triggers the action on pushes to the 'master' branch
 
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    # Step 1: Check out the code from the repository
-    - name: Checkout code
-      uses: actions/checkout@v2
+      # Step 1: Checkout code from the repository
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    # Step 2: Set up Docker
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      # Step 2: Docker login (to interact with Docker Hub or a private registry)
+      - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
-    # Step 3: Build the Docker image using the Dockerfile.dev
-    - name: Build Docker image with Dockerfile.dev
-      run: |
-        docker build -f Dockerfile.dev -t test-image .
+      # Step 3: Build the Docker image using the Dockerfile.dev
+      - name: Build Docker image
+        run: docker build -t cygnetops/react-test -f Dockerfile.dev .
 
-    # Step 4: Run tests in the generated Docker image
-    - name: Run tests inside the Docker container
-      run: |
-        docker run -e CI=true test-image npm run test
+      # Step 4: Run tests inside the Docker container
+      - name: Run tests inside the Docker container
+        run: docker run -e CI=true cygnetops/react-test npm test
+
+      # Step 5: Generate deployment package (zip the current directory, excluding .git files)
+      - name: Generate deployment package
+        run: zip -r deploy.zip . -x '*.git*'
+
+      # Step 6: Deploy to AWS Elastic Beanstalk
+      - name: Deploy to AWS Elastic Beanstalk
+        uses: einaregilsson/beanstalk-deploy@v18
+        with:
+          application_name: frontend  # Elastic Beanstalk application name
+          environment_name: Frontend-env  # Elastic Beanstalk environment name
+          existing_bucket_name: elasticbeanstalk-us-east-1-681852020687  # S3 bucket for EB deployment
+          region: us-east-1  # AWS region
+          version_label: ${{ github.sha }}  # Use the GitHub commit hash as the version label
+          deployment_package: deploy.zip  # The zip file containing the app
+
